Fix sizing on on small-width devices

--- a/css/main.less
+++ b/css/main.less
@@ -15,14 +15,14 @@ li {
     width: 95%;
     margin: 2.5% auto;
 }
-@media screen and (min-width: 320px) {
+@media screen and (min-width: 350px) {
     #content {
         width: 80%;
         margin: 20px auto;
         min-width: 320px;
     }
 }
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 350px) {
     #content {
         width: 95%;
         margin: 2.5% auto;
